added go to roster button

--- a/server/lib/notifications/templates/claim-shift.handlebars
+++ b/server/lib/notifications/templates/claim-shift.handlebars
@@ -21,6 +21,10 @@
   .reject-button {
     background-color: #ED5565;
   }
+
+  .go-to-button, .go-to-button:hover {
+    color: #23527c;
+  }
 </style>
 
 <div>
@@ -29,5 +33,7 @@
   <p class="button-container">
     <a href="{{confirmClaimUrl}}" class="claim-button confirm-button">Confirm</a>
     <a href="{{rejectClaimUrl}}" class="claim-button reject-button">Reject</a>
+
+    <a href="{{rosterUrl}}" class="claim-button go-to-button">Go to roster</a>
   </p>
 </div>
