fixed times on dashboard

--- a/client/views/app/dashboard/shifts-summary/shift-item/shift-item.html
+++ b/client/views/app/dashboard/shifts-summary/shift-item/shift-item.html
@@ -1,7 +1,7 @@
 <template name="shiftItem">
   <tr class="{{confirmed}}">
     <td class="text-left">
-      {{timeFormat shift.startTime}} - {{timeFormat shift.endTime}}
+      {{formatLocationTime shift.startTime}} - {{formatLocationTime shift.endTime}}
     </td>
     <td>{{dayFormat shift.startTime}}</td>
     <td class="text-center">{{section}}</td>
