--- a/client/views/app/task-list/task-item/task-item.html
+++ b/client/views/app/task-list/task-item/task-item.html
@@ -1,10 +1,11 @@
 <template name="taskItem">
   <div class="task-item">
     <div class="row">
-      <div class="col-xs-1">
-        <input type="checkbox" class="task-checkbox" {{checkboxAttr}} />
-      </div>
-      <div class="col-xs-7">
+      <div class="col-xs-8">
+        <span class="float-with-padding">
+          <input type="checkbox" class="task-checkbox" {{checkboxAttr}} />
+        </span>
+        
         <span class="task-title {{isDoneClass}}">
           {{task.title}}
 
