--- a/client/views/app/task-list/task-editor/task-editor.html
+++ b/client/views/app/task-list/task-editor/task-editor.html
@@ -44,7 +44,7 @@
           <div class="col-lg-3 col-sm-4 col-xs-12 text-right">
             <button type="submit" class="btn btn-primary">
               {{#if task._id}}
-                Edit
+                Save
               {{else}}
                 Create
               {{/if}}
