--- a/client/views/app/task-list/task-filter/task-filter.html
+++ b/client/views/app/task-list/task-filter/task-filter.html
@@ -1,6 +1,6 @@
 <template name="taskFilter">
   <div class="dropdown">
-    <button class="btn btn-primary dropdown-toggle" type="button" id="filter-dropdown" data-toggle="dropdown"
+    <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="filter-dropdown" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="true">
       {{activeFilter}}
       <span class="caret"></span>
