--- a/client/views/app/task-list/task-item/task-item.html
+++ b/client/views/app/task-list/task-item/task-item.html
@@ -1,12 +1,24 @@
 <template name="taskItem">
   <div class="task-item">
     <div class="row">
-      <div class="col-xs-1">
-        <input type="checkbox" class="task-checkbox" {{checkboxAttr}} />
+      <div class="col-xs-4">
+        <span class="float-with-padding">
+          <input type="checkbox" class="task-checkbox" {{checkboxAttr}} />
+        </span>
+
+        <h3 class="{{dueDateClass}}">
+          {{dueDateText}}
+        </h3>
+
+        {{#if isTodayTomorrowOrOverdue}}
+          <small>{{dateFormat task.dueDate}}</small>
+        {{/if}}
       </div>
       <div class="col-xs-7">
         <span class="task-title {{isDoneClass}}">
-          {{task.title}}
+          <a href="#" class="text-primary edit-task">
+            {{task.title}}
+          </a>
 
           {{#if task.done}}
             ({{username task.completedBy}})
@@ -15,19 +27,7 @@
           {{> taskDescriptionAndReference task}}
         </span>
       </div>
-      <div class="col-xs-3">
-        <h3 class="{{dueDateClass}}">
-          {{dueDateText}}
-        </h3>
-        {{#if isTodayTomorrowOrOverdue}}
-          <small>{{dateFormat task.dueDate}}</small>
-        {{/if}}
-      </div>
       <div class="col-xs-1">
-        <a href="#" class="edit-task">
-          <i class="fa fa-pencil"></i>
-        </a>
-
         <a href="#" class="remove-task text-danger">
           <i class="fa fa-trash"></i>
         </a>
