--- a/client/views/app/task-list/task-list.html
+++ b/client/views/app/task-list/task-list.html
@@ -13,7 +13,7 @@
             </div>
           {{/if}}
 
-          <div class="task-list-filter">
+          <div class="task-list-filter pull-right">
             {{> taskFilter onFilterChange=onFilterChange filterTypes=filterTypes activeFilter=activeFilterName}}
           </div>
           <!-- .task-list-filter -->
