--- a/client/views/app/menu-items/list/menu-items-list.html
+++ b/client/views/app/menu-items/list/menu-items-list.html
@@ -11,7 +11,7 @@
         <input type="text" name="searchMenuItems" id="searchMenuItemsBox" class="form-control col-sm-8"
                placeholder="Search from Name">
 
-        <hr/>
+        <hr class="full-width"/>
 
         <div class="list-group">
           {{#each menuItems}}
