--- a/client/views/app/task-list/task-editor/task-editor.html
+++ b/client/views/app/task-list/task-editor/task-editor.html
@@ -42,6 +42,11 @@
           </div>
 
           <div class="col-lg-3 col-sm-4 col-xs-12 text-right">
+            {{#if task._id}}
+              <a href="#" class="btn btn-link text-danger remove-task">
+                Remove
+              </a>
+            {{/if}}
             <button type="submit" class="btn btn-primary">
               {{#if task._id}}
                 Save
