--- a/client/views/app/task-list/task-item/task-description-and-reference/task-description-and-reference.html
+++ b/client/views/app/task-list/task-item/task-description-and-reference/task-description-and-reference.html
@@ -4,12 +4,6 @@
       <a data-toggle="collapse" href="#{{_id}}" aria-expanded="false" class="text-info">
         <i class="fa fa-bars"></i>
       </a>
-
-      <div class="collapse" id="{{_id}}">
-        <div class="well">
-          {{description}}
-        </div>
-      </div>
     {{/if}}
 
     {{#if referenceObject}}
@@ -19,6 +13,14 @@
           {{referenceObject.name}}
         </a>
       </span>
+    {{/if}}
+
+    {{#if description}}
+      <div class="collapse" id="{{_id}}">
+        <div class="well">
+          {{description}}
+        </div>
+      </div>
     {{/if}}
   </span>
 </template>
