Fix sidebar menu closing

--- a/client/views/app/navigations/navigation.less
+++ b/client/views/app/navigations/navigation.less
@@ -31,6 +31,10 @@
     overflow-x: hidden;
     width: @sidebar-width;
 
+    #side-menu > li {
+      width: @sidebar-width;
+    }
+
     .nav-first-level-item {
       .slider {
         height: 0;
