--- a/client/views/app/task-list/task-item/task-item.html
+++ b/client/views/app/task-list/task-item/task-item.html
@@ -14,7 +14,13 @@
           <small>{{dateFormat task.dueDate}}</small>
         {{/if}}
       </div>
-      <div class="col-xs-8">
+      <div class="col-xs-8 task-details">
+        <div>
+          <small class="text-muted">
+            Shared for {{sharedFor}}
+          </small>
+        </div>
+
         <span class="task-title {{isDoneClass}}">
           <a href="#" class="text-primary edit-task">
             {{task.title}}
