Added POS Settings spoiler to location cog, fix bug in selectComponent template

--- a/client/views/app/common/select-component/select-component.html
+++ b/client/views/app/common/select-component/select-component.html
@@ -1,6 +1,6 @@
 <template name="selectComponent">
   <select name="{{name}}" class="form-control">
-    {{#each state$values}}
+    {{#each values}}
       {{#if isSelected value}}
         <option value="{{value}}" selected="selected">
           {{text}}
