--- a/client/views/app/organizations/common/edit-location-form/pos-settings/pos-settings.html
+++ b/client/views/app/organizations/common/edit-location-form/pos-settings/pos-settings.html
@@ -1,33 +1,28 @@
 <template name="posSettings">
-  <div class="flyout-header">
-    <button class="close-flyout-button">
-      <i class="fa fa-angle-right"></i>
-    </button>
-    {{locationName}} POS Settings (optional)
-  </div>
-  <div class="flyout-content">
-    <div class="container-fluid">
-      <div class="panel panel-default pos-settings">
-        <div class="panel-body">
+  <div class="container-fluid">
+    {{> selectComponent values=posSystemTypes selected=currentPosSystem name='posSystems'}}
+    <div class="panel panel-default pos-settings">
+      <div class="panel-body">
+        {{#if isCurrentPosSystem 'Revel'}}
           <div class="form-group">
             <label class="col-sm-2 control-label">Host</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" name="posHost" value="{{host}}">
+              <input type="text" class="form-control" name="posHost" value="{{posSettings.host}}">
             </div>
           </div>
           <div class="form-group">
             <label class="col-sm-2 control-label">Key</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" name="posKey" value="{{key}}">
+              <input type="text" class="form-control" name="posKey" value="{{posSettings.key}}">
             </div>
           </div>
           <div class="form-group">
             <label class="col-sm-2 control-label">Secret</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" name="posSecret" value="{{secret}}">
+              <input type="text" class="form-control" name="posSecret" value="{{posSettings.secret}}">
             </div>
           </div>
-        </div>
+        {{/if}}
       </div>
     </div>
   </div>
