--- a/client/views/app/stocktake/stocktake-ordering/ordering-status/expected-delivery-date-picker/expected-delivery-date-picker.html
+++ b/client/views/app/stocktake/stocktake-ordering/ordering-status/expected-delivery-date-picker/expected-delivery-date-picker.html
@@ -3,7 +3,7 @@
     <input type="text" class="form-control date-picker-input"/>
     <button type="button"
             class="btn btn-white date-picker-button">
-      <span class="glyphicon glyphicon-calendar"></span>
+      <span class="fa fa-calendar"></span>
       {{formatDate deliveryDate 'MMMM Do YYYY'}}
     </button>
   </div>
