changed datapicker in task list

--- a/client/views/app/task-list/task-list.less
+++ b/client/views/app/task-list/task-list.less
@@ -57,13 +57,16 @@
       }
     }
 
-    .datepicker {
-      .datepicker-date {
-        border: 0;
-        padding: 2px;
-        width: 105px;
-        cursor: default;
-        background: transparent;
+    .input-group {
+      .input-group-btn {
+        .date-picker-input {
+          visibility: hidden;
+          position: absolute;
+        }
+
+        .date-picker-button {
+          border-radius: 0;
+        }
       }
     }
   }
