--- a/client/views/app/task-list/task-editor/task-editor.html
+++ b/client/views/app/task-list/task-editor/task-editor.html
@@ -5,17 +5,17 @@
         <div class="input-group">
           <input type="text" class="form-control new-task-title" name="new-task-title" placeholder="Title"
                  value="{{task.title}}">
-          <span class="input-group-btn open-datetimepicker">
-            <button class="btn btn-white datepicker" type="button">
-              <input type="button" class="datepicker-date"/>
 
-              <div class="new-task-date">
-                {{taskDate}}
-              </div>
+          <span class="input-group-btn">
+            <input type="text" class="form-control date-picker-input"/>
+            <button type="button"
+                    class="btn btn-white date-picker-button">
               <span class="fa fa-calendar"></span>
+              {{formatDate taskDate 'MMMM Do YYYY'}}
             </button>
           </span>
         </div>
+        <!-- /input-group -->
         <div class="form-group">
           <textarea name="new-task-description" cols="30" rows="10" class="form-control"
                     placeholder="Description ...">{{task.description}}</textarea>
