--- a/client/views/app/task-list/task-item/task-item.html
+++ b/client/views/app/task-list/task-item/task-item.html
@@ -30,7 +30,7 @@
             ({{username task.completedBy}})
           {{/if}}
 
-          {{> taskDescriptionAndReference task}}
+          {{> taskDetails task}}
         </span>
       </div>
     </div>
