--- a/client/views/app/common/comments-panel/comments-panel.html
+++ b/client/views/app/common/comments-panel/comments-panel.html
@@ -1,5 +1,5 @@
 <template name="commentsPanel">
-  <div class="col-md-12 hidden-print">
+  <div class="col-md-12 hidden-print comments-panel">
     <hr>
     <div class="ibox chat-view">
       <div class="ibox-title">
