--- a/client/views/app/task-list/task-item/task-details/task-details.html
+++ b/client/views/app/task-list/task-item/task-details/task-details.html
@@ -6,11 +6,8 @@
       </a>
     {{/if}}
 
-    <a data-toggle="collapse" href="#comments-{{_id}}" aria-expanded="false" class="count-info text-primary">
+    <a data-toggle="collapse" href="#comments-{{_id}}" aria-expanded="false" class="comments-toggler text-primary">
       <i class="fa fa-comment"></i>
-      {{#if commentsCount}}
-        <span class="label">{{commentsCount}}</span>
-      {{/if}}
     </a>
 
     {{#if referenceObject}}
