--- a/client/views/app/task-list/task-list.less
+++ b/client/views/app/task-list/task-list.less
@@ -28,10 +28,18 @@
         border-radius: 0;
         -webkit-box-shadow: none;
         box-shadow: none;
+
+        .comments-panel {
+          float: none;
+        }
       }
 
       .task-info {
         padding-left: 10px;
+
+        .comments-toggler {
+          margin-left: 5px;
+        }
       }
 
       .task-details {
