added duration field to the tasks

--- a/client/views/app/task-list/task-list.less
+++ b/client/views/app/task-list/task-list.less
@@ -68,6 +68,10 @@
         .user-selector-container {
           margin-bottom: 10px;
         }
+
+        .task-buttons-container {
+          margin-top: 10px;
+        }
       }
 
       .input-group {
