--- a/client/views/app/task-list/task-editor/task-editor.html
+++ b/client/views/app/task-list/task-editor/task-editor.html
@@ -41,7 +41,7 @@
             {{> referenceSelector task.reference}}
           </div>
 
-          <div class="col-sm-4 text-right">
+          <div class="col-sm-4">
             {{> timeDurationSelector duration=task.duration}}
           </div>
         </div>
