--- a/client/views/app/task-list/task-editor/time-duration-selector/time-duration-selector.html
+++ b/client/views/app/task-list/task-editor/time-duration-selector/time-duration-selector.html
@@ -1,4 +1,7 @@
 <template name="timeDurationSelector">
+  <i class="fa fa-question-circle pull-right time-duration-popover btn-link" data-toggle="popover"
+     data-placement="top" data-trigger="focus" tabindex="0" role="button"></i>
+
   <input type="text" name="task-duration" class="task-duration form-control"
-         placeholder="Task duration: e.g. 2 hours" value="{{getTaskDuration}}" required="required"/>
+         placeholder="Task duration" value="{{getTaskDuration}}" required="required"/>
 </template>
