--- a/client/views/app/task-list/task-list.less
+++ b/client/views/app/task-list/task-list.less
@@ -72,6 +72,12 @@
         .task-buttons-container {
           margin-top: 10px;
         }
+
+        .time-duration-popover {
+          position: absolute;
+          top: 10px;
+          right: 0;
+        }
       }
 
       .input-group {
