--- a/client/views/app/job-items/detail/job-items-detail.html
+++ b/client/views/app/job-items/detail/job-items-detail.html
@@ -175,11 +175,15 @@
               </div>
             </div>
           {{/ if}}
+        </div>
+      </div>
 
-        </div>
-        <div class="row m-t-lg">
-          {{> commentsPanel id=jobItem._id type="job"}}
-        </div>
+      <div class="col-md-6">
+        {{> relatedTasks type='jobs' itemId=jobItem._id}}
+      </div>
+
+      <div class="col-md-6">
+        {{> commentsPanel id=jobItem._id type="job"}}
       </div>
     </div>
   </div>
