--- a/client/views/app/task-list/task-item/task-details/task-details.html
+++ b/client/views/app/task-list/task-item/task-details/task-details.html
@@ -1,36 +1,42 @@
 <template name="taskDetails">
-  <span class="task-info">
-    {{#if description}}
-      <a data-toggle="collapse" href="#{{_id}}" aria-expanded="false" class="text-info">
-        <i class="fa fa-bars"></i>
-      </a>
-    {{/if}}
+  {{# if equal type "icons"}}
+    <span class="task-info">
+      {{# with task}}
+        {{#if description}}
+          <a data-toggle="collapse" href="#{{_id}}" aria-expanded="false" class="text-info">
+            <i class="fa fa-bars"></i>
+          </a>
+        {{/if}}
 
-    <a data-toggle="collapse" href="#comments-{{_id}}" aria-expanded="false" class="comments-toggler text-primary">
-      <i class="fa fa-comment"></i>
-    </a>
+        <a data-toggle="collapse" href="#comments-{{_id}}" aria-expanded="false" class="comments-toggler text-primary">
+          <i class="fa fa-comment"></i>
+        </a>
 
-    {{#if referenceObject}}
-      <span class="pull-right">
+        {{#if referenceObject}}
+          <span class="pull-right">
         <a href="{{referenceObject.route}}" class="text-primary">
           <i class="text-info fa {{referenceObject.icon}}"></i>
           {{referenceObject.name}}
         </a>
       </span>
-    {{/if}}
+        {{/if}}
+      {{/with}}
+    </span>
+  {{else}}
+    {{# with task}}
+      {{#if description}}
+        <div class="collapse" id="{{_id}}">
+          <div class="well">
+            {{description}}
+          </div>
+        </div>
+      {{/if}}
 
-    {{#if description}}
-      <div class="collapse" id="{{_id}}">
+      <div class="collapse" id="comments-{{_id}}">
         <div class="well">
-          {{description}}
+          {{> commentsPanel id=_id type='taskItem'}}
         </div>
       </div>
-    {{/if}}
-
-    <div class="collapse" id="comments-{{_id}}">
-      <div class="well">
-        {{> commentsPanel id=_id type='taskItem'}}
-      </div>
-    </div>
-  </span>
+    {{/with}}
+  {{/if}}
 </template>
