--- a/client/views/app/task-list/task-item/task-item.html
+++ b/client/views/app/task-list/task-item/task-item.html
@@ -1,7 +1,7 @@
 <template name="taskItem">
   <div class="task-item">
     <div class="row">
-      <div class="col-xs-4">
+      <div class="col-xs-4 task-due-date">
         <span class="float-with-padding">
           <input type="checkbox" class="task-checkbox" {{checkboxAttr}} />
         </span>
@@ -30,9 +30,11 @@
             ({{username task.completedBy}})
           {{/if}}
 
-          {{> taskDetails task}}
+          {{> taskDetails task=task type="icons"}}
         </span>
       </div>
     </div>
+
+    {{> taskDetails task=task type="pannels"}}
   </div>
 </template>
