small fixes for menu items rank report view

--- a/client/views/app/menu-items/menu-list-rank-report/menu-item/menu-item.html
+++ b/client/views/app/menu-items/menu-list-rank-report/menu-item/menu-item.html
@@ -3,7 +3,7 @@
     {{item.name}}
   </td>
   <td><span class="sparkline"></span></td>
-  <td>-</td>
+  <td>{{item.rank}}</td>
   <td>{{itemSalesQuantity}}</td>
   <td>${{item.salesPrice}}</td>
   <td>${{itemTotalPriceFromSales}}</td>
