--- a/client/views/app/organizations/area-settings/user-popup/user-popup.less
+++ b/client/views/app/organizations/area-settings/user-popup/user-popup.less
@@ -19,13 +19,27 @@
   border-radius: 5px;
 }
 
+.modal-dialog .row {
+  padding-bottom: 15px;
+}
+
 .modal-content {
   border-radius: 0;
 }
 
 .modal-content .close-button {
   position: absolute;
-  right: 0.5rem;
-  top: 0.5rem;
+  right: 10px;
+  top: 10px;
   z-index: 10;
+}
+
+.modal-header,
+.close-button {
+  border: none;
+}
+
+.modal-body,
+.modal-header {
+  padding: 10px !important;
 }
