--- a/client/views/app/users/pin-lock/pin-code/pin-code.html
+++ b/client/views/app/users/pin-lock/pin-code/pin-code.html
@@ -1,6 +1,6 @@
 <template name="pinCode">
   <div>
-    {{> userBio userId=userId}}
+    {{> profilePhotoAndName userId=userId}}
     <p>Enter your PIN to unlock</p>
 
     <form class="m-t" role="form">
