--- a/client/views/app/users/profile-photo-and-name/profile-photo-and-name.html
+++ b/client/views/app/users/profile-photo-and-name/profile-photo-and-name.html
@@ -1,4 +1,4 @@
-<template name="userBio">
+<template name="profilePhotoAndName">
   <div class="user-bio">
     <div class="m-b-md">
       <img alt="image" class="img-circle circle-border" src="{{profilePicture userId}}">
