--- a/client/views/app/roster/weekly-shift-roster/weekly-roster-day/shift-basic/shift-basic.less
+++ b/client/views/app/roster/weekly-shift-roster/weekly-roster-day/shift-basic/shift-basic.less
@@ -12,4 +12,10 @@
   &.can-edit {
     cursor: move;
   }
+
+  .select-worker[data-value="Open"] {
+    color: #DD1144;
+    font-style: italic;
+    font-weight: normal;
+  }
 }
