--- a/client/views/app/organizations/area-settings/user-popup/user-popup.less
+++ b/client/views/app/organizations/area-settings/user-popup/user-popup.less
@@ -8,7 +8,7 @@
 }
 
 .modal-dialog {
-  width: 302px;
+  width: 320px;
   margin: 0;
   visibility: hidden;
 }
@@ -42,4 +42,10 @@
 .modal-body,
 .modal-header {
   padding: 10px !important;
+}
+
+.modal-body button.disabled,
+.modal-body button.disabled:hover {
+  color: #2f4050;
+  border: 1px solid #e5e6e7;
 }
