added unavailabilities list in user profile

--- a/client/views/app/users/profile/profile-items/shifts/shifts.html
+++ b/client/views/app/users/profile/profile-items/shifts/shifts.html
@@ -1,5 +1,5 @@
 <template name="rosteredShifts">
-  <div class="col-md-4">
+  <div class="col-sm-12 col-md-6 col-lg-4">
     <div class="ibox float-e-margins">
       <div class="ibox-title">
         <h5>Rostered Shifts</h5>
