--- a/client/views/app/users/profile/profile-items/profile/profile.html
+++ b/client/views/app/users/profile/profile-items/profile/profile.html
@@ -1,5 +1,5 @@
 <template name="profile">
-  <div class="col-md-12 col-lg-4">
+  <div class="col-sm-12 col-md-6 col-lg-4">
     <div class="ibox float-e-margins">
       <div class="ibox-title">
         <h5>Profile Detail</h5>
