--- a/client/views/app/users/profile/profile-items/training/training.html
+++ b/client/views/app/users/profile/profile-items/training/training.html
@@ -1,5 +1,5 @@
 <template name="training">
-  <div class="col-md-4">
+  <div class="col-sm-12 col-md-6 col-lg-4">
     <div class="ibox float-e-margins">
       <div class="ibox-title">
         <h5>Training</h5>
