--- a/client/views/app/users/profile/profile.html
+++ b/client/views/app/users/profile/profile.html
@@ -8,6 +8,7 @@
   <div class="wrapper wrapper-content">
     <div class="row animated">
       {{> profile user}}
+      {{> unavailabilitiesList user}}
       {{> rosteredShifts user}}
       {{> training userId=user._id}}
     </div>
