--- a/client/views/app/navigations/top-navbar/top-navbar.html
+++ b/client/views/app/navigations/top-navbar/top-navbar.html
@@ -43,6 +43,9 @@
             {{/if}}
           </a>
         </li>
+        <li>
+          <a href="#"><i class="fa fa-calendar"></i></a>
+        </li>
         {{#if isManager}}
           <li class="dropdown">
             <a class="" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
