--- a/client/views/app/task-list/task-list.less
+++ b/client/views/app/task-list/task-list.less
@@ -66,7 +66,11 @@
         }
 
         .user-selector-container {
-          margin-bottom: 10px;
+          margin: -16px 0 10px;
+
+          .select2-selection {
+            border-radius: 0;
+          }
         }
 
         .task-buttons-container {
