added functionality for displaying assigned for field

--- a/client/views/app/task-list/task-editor/time-duration-selector/time-duration-selector.html
+++ b/client/views/app/task-list/task-editor/time-duration-selector/time-duration-selector.html
@@ -3,5 +3,5 @@
      data-placement="top" data-trigger="focus" tabindex="0" role="button"></i>
 
   <input type="text" name="task-duration" class="task-duration form-control"
-         placeholder="Task duration" value="{{getTaskDuration}}" required="required"/>
+         placeholder="Task duration" value="{{getTaskDuration}}"/>
 </template>
