--- a/client/views/app/task-list/task-item/task-item.html
+++ b/client/views/app/task-list/task-item/task-item.html
@@ -1,42 +1,28 @@
 <template name="taskItem">
-  <div class="task-item">
-    <div class="row">
-      <div class="col-xs-4 task-due-date">
-        {{#if canDoneTask}}
-          <span class="float-with-padding">
-          <input type="checkbox" class="task-checkbox" {{checkboxAttr}} />
-        </span>
-        {{/if}}
+  <tr class="edit-task">
+    <td class="check-mail">
+      {{#if canDoneTask}}
+        <input type="checkbox" class="task-checkbox" {{checkboxAttr}} />
+      {{/if}}
+    </td>
+    <td class="mail-ontact">{{dateFormat task.dueDate}}</td>
 
-        <h3 class="{{dueDateClass}}">
-          {{dueDateText}}
-        </h3>
+    <td class="mail-subject task-title {{isDoneClass}}">{{task.title}} {{#if task.done}} ({{username task.completedBy}}) {{/if}}</td>
 
-        {{#if isTodayTomorrowOrOverdue}}
-          <small>{{dateFormat task.dueDate}}</small>
-        {{/if}}
-      </div>
-      <div class="col-xs-8 task-details">
-        <div>
-          <small class="text-muted">
-            Assigned to {{assignedTo}}
-          </small>
-        </div>
+    <td class="mail-subject">
+      <span class="label label-warning pull-right">{{taskDuration}}</span>
+    </td>
 
-        <span class="task-title {{isDoneClass}}">
-          <a href="#" class="text-primary {{#if canDoneTask}}edit-task{{/if}}">
-            {{task.title}}
-          </a>
+    <td>{{assignedTo}}</td>
 
-          {{#if task.done}}
-            ({{username task.completedBy}})
+    <td class="text-right mail-date">
+      <a class="count-info" href="#">
+        <i class="fa fa-comment-o fa-fw fa-lg">
+          {{#if commentsCount}}
+            <span class="label label-primary">{{commentsCount}}</span>
           {{/if}}
-
-          {{> taskDetails task=task type="icons"}}
-        </span>
-      </div>
-    </div>
-
-    {{> taskDetails task=task type="pannels"}}
-  </div>
+        </i>
+      </a>
+    </td>
+  </tr>
 </template>
