--- a/client/views/app/task-list/task-list.html
+++ b/client/views/app/task-list/task-list.html
@@ -1,37 +1,34 @@
 <template name="taskList">
   {{> pageHeading title='Task List' name='taskList' onCreateTaskAction=onCreateTaskAction}}
 
-  <div class="wrapper wrapper-content">
-    <div class="ibox-content task-list-content">
-      <div class="row">
-        <div class="col-xs-12">
-          {{#if isNewTaskCreating}}
-            <div class="row">
-              <div class="col-xs-12">
-                {{> taskEditor onCreateTaskAction=onCreateTaskAction task=task}}
-              </div>
-            </div>
-          {{/if}}
-
-          <div class="task-list-filter pull-right">
-            {{> taskFilter onFilterChange=onFilterChange filterTypes=filterTypes activeFilter=activeFilterName}}
-          </div>
-          <h2>{{activeFilterName}}</h2>
-          <!-- .task-list-filter -->
-
+  <div class="wrapper wrapper-content task-list-content">
+    <div class="row">
+      <div class="col-xs-12">
+        {{#if isNewTaskCreating}}
           <div class="row">
-            <div class="task-list-container col-xs-12">
-              {{#if tasks.count}}
-                {{#each tasks}}
-                  {{> taskItem task=this onEditTaskAction=onEditTaskAction}}
-                {{/each}}
-              {{else}}
-                <h3>No tasks here</h3>
-              {{/if}}
+            <div class="col-xs-12">
+              {{> taskEditor onCreateTaskAction=onCreateTaskAction task=task}}
             </div>
           </div>
-          <!-- .task-list-container -->
+        {{/if}}
+
+        <div class="mail-box-header">
+          {{> taskFilter onFilterChange=onFilterChange filterTypes=filterTypes activeFilter=activeFilterName}}
         </div>
+        <!-- .task-list-filter -->
+
+        <div class="mail-box">
+          {{#if tasks.count}}
+            <table class="table table-hover table-mail task-list-container">
+              {{#each tasks}}
+                {{> taskItem task=this onEditTaskAction=onEditTaskAction}}
+              {{/each}}
+            </table>
+          {{else}}
+            <h3>No tasks here</h3>
+          {{/if}}
+        </div>
+        <!-- .task-list-container -->
       </div>
     </div>
   </div>
