--- a/client/views/app/task-list/task-item/task-item.html
+++ b/client/views/app/task-list/task-item/task-item.html
@@ -5,19 +5,27 @@
         <input type="checkbox" class="task-checkbox" {{checkboxAttr}} />
       {{/if}}
     </td>
-    <td class="mail-ontact">{{dateFormat task.dueDate}}</td>
 
-    <td class="mail-subject task-title {{isDoneClass}}">{{task.title}} {{#if task.done}} ({{username task.completedBy}}) {{/if}}</td>
+    <td class="mail-ontact">
+      {{dateFormat task.dueDate}}
+    </td>
 
     <td class="mail-subject">
-      <span class="label label-warning pull-right">{{taskDuration}}</span>
+      <span class="label label-warning pull-right hidden-xs">{{taskDuration}}</span>
     </td>
 
     <td>{{assignedTo}}</td>
 
+    <td>
+      <a href="{{referenceObject.route}}" class="text-primary">
+        <i class="text-info fa {{referenceObject.icon}}"></i>
+        {{referenceObject.name}}
+      </a>
+    </td>
+
     <td class="text-right mail-date">
-      <a class="count-info" href="#">
-        <i class="fa fa-comment-o fa-fw fa-lg">
+      <a class="task-comment-count" href="#">
+        <i class="fa fa-comments-o fa-fw fa-lg">
           {{#if commentsCount}}
             <span class="label label-primary">{{commentsCount}}</span>
           {{/if}}
