--- a/client/views/app/task-list/task-list.html
+++ b/client/views/app/task-list/task-list.html
@@ -1,35 +1,42 @@
 <template name="taskList">
   {{> pageHeading title='Task List' name='taskList' onCreateTaskAction=onCreateTaskAction}}
 
-  <div class="wrapper wrapper-content task-list-content">
-    <div class="row">
-      <div class="col-xs-12">
-        {{#if isNewTaskCreating}}
-          <div class="row">
-            <div class="col-xs-12">
-              {{> taskEditor onCreateTaskAction=onCreateTaskAction task=task}}
-            </div>
-          </div>
-        {{/if}}
+  <div class="task-list-content">
+    {{#if isNewTaskCreating}}
+      <div class="row">
+        <div class="col-xs-12">
+          {{> taskEditor onCreateTaskAction=onCreateTaskAction task=task}}
+        </div>
+      </div>
+    {{/if}}
 
-        <div class="mail-box-header">
+    <div class="task-list-filter">
+      <div class="row">
+        <div class="col-xs-12">
           {{> taskFilter onFilterChange=onFilterChange filterTypes=filterTypes activeFilter=activeFilterName}}
         </div>
-        <!-- .task-list-filter -->
+      </div>
+    </div>
+    <!-- .task-list-filter -->
 
-        <div class="mail-box">
-          {{#if tasks.count}}
+    <div class="row">
+      <div class="mail-box">
+        {{#if tasks.count}}
+          <div class="table-responsive">
             <table class="table table-hover table-mail task-list-container">
+              <tbody class="">
               {{#each tasks}}
                 {{> taskItem task=this onEditTaskAction=onEditTaskAction}}
               {{/each}}
+              </tbody>
             </table>
-          {{else}}
-            <h3>No tasks here</h3>
-          {{/if}}
-        </div>
-        <!-- .task-list-container -->
+          </div>
+          <!-- .table-responsive -->
+        {{else}}
+          <h3>No tasks here</h3>
+        {{/if}}
       </div>
+      <!-- .mail-box -->
     </div>
   </div>
 </template>
