renamed date filter + changed task list displaying

--- a/client/views/app/task-list/task-filters/task-date-filter/task-date-filter-item/task-date-filter-item.html
+++ b/client/views/app/task-list/task-filters/task-date-filter/task-date-filter-item/task-date-filter-item.html
@@ -1,4 +1,4 @@
-<template name="taskFilterItem">
+<template name="taskDateFilterItem">
   <li class="task-filter-switcher {{activeFilterClass}}">
     <a href="#">{{item}}</a>
   </li>
