--- a/client/views/app/task-list/task-list.html
+++ b/client/views/app/task-list/task-list.html
@@ -13,7 +13,7 @@
     <div class="task-list-filter">
       <div class="row">
         <div class="col-xs-12">
-          {{> taskFilter onFilterChange=onFilterChange filterTypes=filterTypes activeFilter=activeFilterName}}
+          {{> taskDateFilter onFilterChange=onDateFilterChange filterTypes=filterTypes activeFilter=activeFilterName}}
         </div>
       </div>
     </div>
