--- a/client/views/app/task-list/task-filters/task-date-filter/task-date-filter.html
+++ b/client/views/app/task-list/task-filters/task-date-filter/task-date-filter.html
@@ -1,4 +1,4 @@
-<template name="taskFilter">
+<template name="taskDateFilter">
   <div class="dropdown">
     <button class="btn btn-white btn-sm dropdown-toggle" type="button" id="filter-dropdown" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="true">
@@ -8,7 +8,7 @@
 
     <ul class="dropdown-menu" aria-labelledby="filter-dropdown">
       {{#each filterTypes}}
-        {{> taskFilterItem templateData}}
+        {{> taskDateFilterItem templateData}}
       {{/each}}
     </ul>
   </div>
