added user filter

--- a/client/views/app/task-list/task-filters/task-date-filter/task-date-filter.html
+++ b/client/views/app/task-list/task-filters/task-date-filter/task-date-filter.html
@@ -1,5 +1,5 @@
 <template name="taskDateFilter">
-  <div class="dropdown">
+  <div class="dropdown pull-left">
     <button class="btn btn-white btn-sm dropdown-toggle" type="button" id="filter-dropdown" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="true">
       {{activeFilter}}
