--- a/client/views/app/task-list/task-list.html
+++ b/client/views/app/task-list/task-list.html
@@ -14,6 +14,7 @@
       <div class="row">
         <div class="col-xs-12">
           {{> taskDateFilter onFilterChange=onDateFilterChange filterTypes=filterTypes activeFilter=activeFilterName}}
+          {{> taskUserFilter onFilterChange=onUserFilterChange}}
         </div>
       </div>
     </div>
