--- a/client/views/app/task-list/task-list.less
+++ b/client/views/app/task-list/task-list.less
@@ -15,6 +15,15 @@
         }
       }
     }
+
+    .select2 {
+      margin-left: 10px;
+      margin-top: 1px;
+      
+      .select2-selection {
+        border-radius: 0;
+      }
+    }
   }
 
   .float-with-padding {
@@ -24,6 +33,10 @@
 
   h2 {
     margin: 0 0 20px 0;
+  }
+
+  h3 {
+    padding: 20px 0 15px 20px;
   }
 
   .task-list-container {
