--- a/client/views/app/roster/weekly-figures/roster-table/roster-table.html
+++ b/client/views/app/roster/weekly-figures/roster-table/roster-table.html
@@ -25,7 +25,7 @@
           </thead>
           <tbody>
 
-          {{>totalSalesRow weekDate=weekDate}}
+          {{>totalSalesRow weekDate=weekDate showAccuracy=false}}
 
           <tr>
             <td>Staff Cost ($)</td>
