Improved date formating in roster table

--- a/client/views/app/roster/weekly-figures/roster-table/roster-table.html
+++ b/client/views/app/roster/weekly-figures/roster-table/roster-table.html
@@ -9,7 +9,7 @@
             {{#each weekDates}}
               <th colspan="2">
                 {{weekDateName this}}
-                <h5>{{dateFormat this}}</h5>
+                <h5>{{rosterTableDateFormat this}}</h5>
               </th>
             {{/each}}
           </tr>
