fixed task widget

--- a/client/views/app/job-items/detail/job-items-detail.html
+++ b/client/views/app/job-items/detail/job-items-detail.html
@@ -178,11 +178,11 @@
         </div>
       </div>
 
-      <div class="col-md-6">
-        {{> relatedTasks type='jobs' itemId=jobItem._id}}
+      <div class="col-lg-6">
+        {{> taskWidget type='jobs' itemId=jobItem._id}}
       </div>
 
-      <div class="col-md-6">
+      <div class="col-lg-6">
         {{> commentsPanel id=jobItem._id type="job"}}
       </div>
     </div>
