--- a/client/views/app/menu-items/details/menu-item-details.html
+++ b/client/views/app/menu-items/details/menu-item-details.html
@@ -58,11 +58,11 @@
       </div>
       {{> menuDetailWidgets}}
 
-      <div class="col-md-6">
-        {{> relatedTasks type='menus' itemId=_id}}
+      <div class="col-lg-6">
+        {{> taskWidget type='menus' itemId=_id}}
       </div>
 
-      <div class="col-md-6">
+      <div class="col-lg-6">
         {{> commentsPanel id=_id type='menu'}}
       </div>
     </div>
