--- a/client/views/app/suppliers/supplier-profile/supplier-profile.html
+++ b/client/views/app/suppliers/supplier-profile/supplier-profile.html
@@ -26,11 +26,11 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6">
-            {{> relatedTasks type="suppliers" itemId=supplierId}}
+          <div class="col-lg-6">
+            {{> taskWidget type="suppliers" itemId=supplierId}}
           </div>
 
-          <div class="col-md-6">
+          <div class="col-lg-6">
             {{> commentsPanel id=supplierId type='supplier'}}
           </div>
         </div>
