--- a/client/views/app/common/comments-panel/comments-panel.html
+++ b/client/views/app/common/comments-panel/comments-panel.html
@@ -1,10 +1,6 @@
 <template name="commentsPanel">
   <div class="col-md-12 hidden-print comments-panel">
-    <hr>
     <div class="ibox chat-view">
-      <div class="ibox-title">
-        Comments
-      </div>
       <div class="ibox-content">
         <div class="row">
           <div class="col-md-12">
@@ -15,7 +11,7 @@
                 {{/each}}
               {{else}}
                 <div class="middle-box text-center">
-                  <h3 class="font-bold">Add Comments Here.</h3>
+                  <h5 class="font-bold">Be the first to add a comment.</h5>
                 </div>
               {{/if}}
             </div>
