--- a/client/views/app/tasks/common/task-item/task-item.html
+++ b/client/views/app/tasks/common/task-item/task-item.html
@@ -6,7 +6,7 @@
       {{/if}}
     </td>
 
-    <td class="mail-ontact">
+    <td class="mail-ontact {{dueDateClass}}">
       {{dateFormat task.dueDate}}
     </td>
 
@@ -22,7 +22,9 @@
     </td>
 
     <td>
-      <p>{{{assignedTo}}}</p>
+      {{#each task.assignedTo}}
+        <p>{{username this}}</p>
+      {{/each}}
     </td>
 
     <td>
@@ -45,9 +47,7 @@
 
   <tr class="collapse" id="comments-{{task._id}}">
     <td colspan="7">
-      <div class="well">
         {{> commentsPanel id=task._id type='taskItem'}}
-      </div>
     </td>
   </tr>
 </template>
