Fixed bug with user-popup

--- a/client/views/app/organizations/area-settings/user-popup/user-popup.html
+++ b/client/views/app/organizations/area-settings/user-popup/user-popup.html
@@ -1,5 +1,5 @@
 <template name="userPopup">
-  <div class="modal fade">
+  <div class="user-popup modal">
     <div class="modal-dialog">
       {{#if Template.subscriptionsReady}}
       <div class="modal-content">
