created simple calendar

--- a/client/views/app/navigations/top-navbar/top-navbar.html
+++ b/client/views/app/navigations/top-navbar/top-navbar.html
@@ -41,7 +41,7 @@
           </a>
         </li>
         <li>
-          <a href="#"><i class="fa fa-calendar"></i></a>
+          <a href="{{pathFor 'calendar' date=shortDateFormat}}"><i class="fa fa-calendar"></i></a>
         </li>
       </ul>
     </nav>
