--- a/client/views/app/navigations/heading/breadcrumbs/breadcrumbs.html
+++ b/client/views/app/navigations/heading/breadcrumbs/breadcrumbs.html
@@ -1,6 +1,6 @@
 <template name="breadcrumbs">
   <!-- BREADCRUMBS -->
-  <div class="col-xs-6">
+  <div class="col-sm-6 col-xs-12">
     <h2>
       {{#if isMenuDetailed}}
         {{#if canEditMenu}}
