--- a/client/views/app/navigations/heading/heading.html
+++ b/client/views/app/navigations/heading/heading.html
@@ -2,7 +2,7 @@
   <div class="row wrapper border-bottom white-bg page-heading">
     {{> breadcrumbs heading=heading id=id type=name title=title}}
 
-    <div class="col-xs-6">
+    <div class="col-md-6 col-xs-12">
       {{#if headingToLoad}}
         {{> Template.dynamic template=headingToLoad data=templateData}}
       {{/if}}
