started to make the separate calendar component

--- a/client/views/app/calendar/user-calendar/user-calendar.html
+++ b/client/views/app/calendar/user-calendar/user-calendar.html
@@ -1,5 +1,3 @@
 <template name="userCalendar">
-  <h1>Calendar</h1>
-
-  {{> ReactiveFullcalendar options=calendarOptions}}
+  {{> calendarItem}}
 </template>
