--- a/client/views/app/roster/weekly-figures/figure-boxes/figure-boxes.html
+++ b/client/views/app/roster/weekly-figures/figure-boxes/figure-boxes.html
@@ -1,9 +1,7 @@
 <template name="figureBoxes">
   <div class="row">
-    {{#with figureBoxDataHelper}}
-      {{> salesFigureBox figureBox=this}}
-      {{> staffCostFigureBox figureBox=this}}
-      {{> staffCostPercentageFigureBox figureBox=this}}
-    {{/with}}
+    {{#each figureBoxesConfigs}}
+      {{> figureBox}}
+    {{/each}}
   </div>
 </template>
