--- a/client/views/app/roster/weekly-figures/roster-table/staff-cost-percentages/staff-cost-percentages.html
+++ b/client/views/app/roster/weekly-figures/roster-table/staff-cost-percentages/staff-cost-percentages.html
@@ -1,6 +1,6 @@
 <template name="staffCostPercentagesTr">
-  {{#with dailyStaff}}
-    <td>{{roundCount forecastedWage}}%</td>
-    <td class="{{textClass}}">{{roundCount actualWage}}%</td>
+  {{#with percentages}}
+    <td>{{roundCount forecast}}%</td>
+    <td class="{{statusClass}}">{{roundCount actual}}%</td>
   {{/with}}
 </template>
