--- a/client/views/app/roster/weekly-figures/weekly-figures.html
+++ b/client/views/app/roster/weekly-figures/weekly-figures.html
@@ -1,6 +1,6 @@
 <template name="weeklyFigures">
   <div class="collapse" id="collapse">
-    {{> figureBoxes figureBoxDataHelper=state$figureBoxDataHelper}}
-    {{> rosterTable weekDates=weekDates figureBoxDataHelper=state$figureBoxDataHelper}}
+    {{> figureBoxes totalFigures}}
+    {{> rosterTable date=date weekFigures=weekFigures}}
   </div>
 </template>
