--- a/client/views/app/roster/weekly-figures/figure-boxes/figure-box/figure-box.html
+++ b/client/views/app/roster/weekly-figures/figure-boxes/figure-box/figure-box.html
@@ -9,7 +9,7 @@
           <h5>{{label}}</h5>
 
           <h1 class="no-margins">
-            ${{value}}
+            {{value}}
           </h1>
         {{/with}}
 
@@ -21,7 +21,7 @@
 
         <small>
           {{#with bottom}}
-            {{label}}: ${{value}}
+            {{label}}: {{value}}
           {{/with}}
         </small>
       </div>
