added calendarEvent collection, checker  and methods
added calendarEvents publication

added placing recurring jobitems onto calendar

--- a/client/views/app/calendar/calendar.less
+++ b/client/views/app/calendar/calendar.less
@@ -1,7 +1,7 @@
 .fc{
-  //td.fc-today {
-  //  background-color: #fff;
-  //}
+  td.fc-today {
+    background-color: #fff;
+  }
 
   .fc-icon {
     &.fc-icon-right-single-arrow, &.fc-icon-left-single-arrow {
