--- a/client/views/app/calendar/user-calendar/user-calendar.html
+++ b/client/views/app/calendar/user-calendar/user-calendar.html
@@ -1,3 +1,3 @@
 <template name="userCalendar">
-  {{> calendarItem userId=currentUser._id date=date}}
+  {{> calendarItem userId=currentUser._id date=date type=type}}
 </template>
