--- a/client/views/app/navigations/top-navbar/top-navbar.less
+++ b/client/views/app/navigations/top-navbar/top-navbar.less
@@ -5,5 +5,8 @@ nav.navbar-static-top {
     .organization-structure-flyout {
       margin-right: 16px;
     }
+    a.organization-structure-flyout {
+      margin-right: 0;
+    }
   }
 }
